# gis-assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  CORE_INTEGRATION_ANALYSIS.md  Dockerfile  LICENSE  Makefile  README.md  add_geojson_support.py  compliance_map.html  docker-compose.yml  pyproject.toml  report.json  requirements.txt  setup.py
docs/: ADVANCED_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  EXAMPLES_SUMMARY.md  GEOJSON_SUPPORT_README.md  MULTI_PROVIDER_SETUP.md  NLP_QUERY_PARSER_README.md  OIL_GAS_LEASE_GUIDE.md  PAGINATION_ANALYSIS.md  PRODUCTION_UPGRADE.md  README.md  README_PRODUCTION.md  SESSION_GUIDE.md  STRUCTURE.md
examples/: 01_basic_state_compliance.py  01_basic_texas_compliance.py  02_spatial_query_austin.py  02_spatial_query_city.py  03_export_results.py  04_filter_and_analyze.py  05_batch_multiple_states.py  06_custom_thresholds.py  07_session_save_load.py  08_discrepancy_demo.py  09_advanced_query_demo.py  10_cache_demo.py  11_map_compliance_results.py  12_multi_provider_demo.py  13_nlp_query_demo.py  14_oil_gas_lease_demo.py  test_parser_quick.py  test_top_5.py
src/: __init__.py  arcgis_client.py  compliance_checker.py  config.py  discrepancy_detector.py  errors.py  llm_providers.py  logger.py  nlp_query_intent_based_parser.py  nlp_query_parser.py  query_executor.py  session_manager.py
tests/: __init__.py  test_arcgis_client.py  test_compliance_checker.py  test_discrepancy_detector.py  test_max_pages.py  test_nlp_query_parser.py  test_oil_gas_compliance.py  test_session_manager.py
